tests/lean/586.lean.expected.out
Nat.zero : Nat
`Nat.succ : Lean.Name
586.lean:13:0-13:3: error: unknown identifier 'zero✝'
586.lean:13:0-13:3: error: unknown constant 'succ✝'
